# open-pages

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: helm.yml  release.yml  test.yml
deploy/docker/: compose.yml
open_pages/: common.py  files.py  log.py  main.py  settings.py  site.py  utils.py
open_pages/api/: files.py  routes.py
open_pages/ui/: routes.py  utils.py
templates/: index.html  index.jinja
templates/static/: index.js
tests/: api.py  conftest.py  test_api.py  test_site.py  test_site_upload.py  test_ui.py
tests/files/: index.html
