[tool.poetry]
name = "open-pages"
version = "0.1.0"
description = "Open Pages is an open-source project that provides a minimalistic alternative to GitHub Pages or GitLab Pages. This service allows users to upload and serve static HTML files via a simple UI or API"
authors = ["Matvey Abramov <karapys.mor@gmail.com>"]
readme = "README.md"
packages = [{ include = "open_pages" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pydantic-settings = "^2.3.4"
aiofiles = "^24.1.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
mypy = "^1.11.0"
types-aiofiles = "^24.1.0.20240626"
ruff = "^0.5.4"
types-beautifulsoup4 = "^4.12.0.20240511"


[tool.poetry.group.dev-optional.dependencies]
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "TID", # flake8-tidy-imports
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"starlette".msg = "Use `fastapi` instead."

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
